data/derived/comb/progs/unify/prog5616.ml.out
Characters 71-81:
  if n < 0 then [] else []::digitsOfInt (n/10) @ (n mod 10);;
                                                 ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list list
